# datamanifest

./: .gitignore  404.html  README.md  _sync_julia_api.py  _sync_spec.py  datasets.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yaml  docs.yml
adding-datasets/: index.html
api/: index.html
cli/: index.html
configuration/: index.html
conformance/: index.html
datamanifest/: __init__.py  cli.py  config.py  database.py  default_loaders.py  delegation.py  importers.py  migrate.py  pipelines.py  storage.py  sync.py
datamanifest/cache/: __init__.py  _decorator.py  _gc.py  _hash.py  _index.py  _inspect.py  _sidecars.py  _usage.py
datamanifest/store/: __init__.py  loaders.py  locations.py  materialize.py  serialize.py
design/: design-database-scoped-caching.md  design-notes.md  design-state-file.md  design-storage-v5.md
design-notes/: index.html
design-remote-protocols/: index.html
design-state-file/: index.html
docs/: _sync_julia_api.py  adding-datasets.md  api.md  cli.md  configuration.md  conformance.md  datamanifest-toml.md  design-lockfile.md  design-notes.md  design-remote-protocols.md  design-state-file.md  importing.md  index.md  installation.md  julia-api.md  language-bindings.md  manifest-format.md  manifest-spec.md  moving-data.md  python-api.md  quickstart.md  related.md  roadmap.md  storage.md  use-cases.md
importing/: index.html
installation/: index.html
julia-api/: index.html
language-bindings/: index.html
manifest-format/: index.html
manifest-spec/: index.html
moving-data/: index.html
python-api/: index.html
quickstart/: index.html
related/: index.html
roadmap/: index.html
search/: search_index.json
storage/: index.html
tests/: conformance_pin.toml  conftest.py  test_basic.py  test_cache.py  test_cache_gc.py  test_cli.py  test_cli_state.py  test_conformance.py  test_db_cached.py  test_delegation.py  test_fsspec.py  test_importers.py  test_inspect.py  test_lang_implicit.py  test_migrate.py  test_pools.py  test_state.py  test_storage.py  test_store_materialize.py  test_sync.py
tests/data/: intake_catalog.yml  pooch_registry.txt  zenodo_record.json
tests/helpers/: loaders.py
use-cases/: index.html
