[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datamanifestpy"
dynamic = ["version"]
description = "Python port of DataManifest.jl — declare and manage data dependencies for scientific projects"
authors = [
    { name="Mahé Perrette", email="mahe.perrette@gmail.com" }
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
keywords = [
    "data",
    "dataset",
    "data-management",
    "data-dependencies",
    "manifest",
    "datamanifest",
    "reproducibility",
    "reproducible-research",
    "provenance",
    "checksum",
    "doi",
    "download",
    "fair-data",
    "scientific-computing",
    "research-data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Mirroring",
]
dependencies = [
    "httpx",
    "tqdm",
    "tomli_w",
    "tomli; python_version<'3.11'",
    "platformdirs",
]

[project.optional-dependencies]
csv = ["pandas"]
parquet = ["pandas", "pyarrow"]
nc = ["xarray", "netcdf4"]
yaml = ["pyyaml"]
fsspec = ["fsspec"]
all = ["pandas", "pyarrow", "xarray", "netcdf4", "pyyaml", "fsspec"]
dev = ["pytest", "fsspec", "pyyaml"]
docs = [
    # Pin below MkDocs 2.0: that release drops the plugin/theme/config system
    # with no migration path and is incompatible with Material for MkDocs.
    # The 1.x line is stable and is what Material targets.
    "mkdocs>=1.5,<2",
    "mkdocs-material>=9.5",
    "mkdocs-include-markdown-plugin>=6.0",
]

[project.urls]
Homepage      = "https://github.com/perrette/datamanifest"
Repository    = "https://github.com/perrette/datamanifest"
Issues        = "https://github.com/perrette/datamanifest/issues"
Documentation = "https://perrette.github.io/datamanifest/"
Changelog     = "https://github.com/perrette/datamanifest/commits/main"

[project.scripts]
datamanifest = "datamanifest.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["datamanifest"]

[tool.setuptools_scm]
write_to = "datamanifest/_version.py"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
